--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "swiper": "^8.1.3",
     "web-vitals": "^2.1.4"
   },
