--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "formik": "^2.2.9",
     "react": "^18.0.0",
+    "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
@@ -18,7 +20,8 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "swiper": "^8.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
