--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-confirm-alert": "^2.8.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
+    "react-insta-stories": "^2.3.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
