--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"homepage": ".",
 	"name": "ticket-organizator",
 	"version": "0.1.0",
 	"private": true,
@@ -10,6 +11,7 @@
 		"formik": "^2.2.9",
 		"react": "^18.0.0",
 		"react-confirm-alert": "^2.8.0",
+		"react-countup": "^6.2.0",
 		"react-dom": "^18.0.0",
 		"react-icons": "^4.3.1",
 		"react-insta-stories": "^2.3.0",
@@ -27,6 +29,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
+		"build:clean": "rm -rf build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject"
 	},
